[project]
name = "live_data_server"
description = "Data server for data plots"
dynamic = ["version"]
requires-python = ">=3.6"
dependencies = [
  # list all runtime dependencies here
]
license = { text = "BSD-3" }

[project.urls]
homepage = "https://livedata-ornl.readthedocs.io" # if no homepage, use repo url

[build-system]
requires = ["setuptools >= 40.6.0", "wheel", "toml", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "minor"

[tool.versioningit.format]
distance = "{next_version}.dev{distance}"
dirty = "{version}+d{build_date:%Y%m%d}"
distance-dirty = "{next_version}.dev{distance}+d{build_date:%Y%m%d%H%M}"

[tool.versioningit.write]
file = "src/live_data_server/live_data_server/_version.py"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "scripts*", "docs*"]

[tool.pytest.ini_options]
pythonpath = [".", "src", "scripts"]
testpaths = ["tests"]
python_files = ["test*.py"]

[tool.ruff]
line-length = 120
lint.select = [
  "A",
  "ARG",
  "ASYNC",
  "BLE",
  "C90",
  "E",
  "F",
  "I",
  "N",
  "UP032",
  "W",
]

# Add additional 3rd party tool configuration here as needed
